--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
 <body>
 	Задачи на от 2013 на Телерик за курса по PHP на Иван Ванков - gatakka:
 	<ol>
-	<li>
-		<a href="task-1-expenses">Книга за разходи</a> - трета лекция от 18.09.2013
-	</li>
+		<li>
+			<a href="task-1-expenses">Книга за разходи</a> - трета лекция от 18.09.2013
+		</li>
+		<li>
+			<a href="task-2-uploads">Система за качване на файлове</a> - четвърта лекция от 25.09.2013
+		</li>
 	</ol>
 </body>
 </html>
