Started task-3-messages

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Телерик - PHP</title>
-</head>
-<body>
-	Задачи на от 2013 на Телерик за курса по PHP на Иван Ванков - gatakka:
-	<ol>
-		<li>
-			<a href="task-1-expenses">Книга за разходи</a> - трета лекция от 18.09.2013
-		</li>
-		<li>
-			<a href="task-2-uploads">Система за качване на файлове</a> - четвърта лекция от 25.09.2013
-		</li>
-	</ol>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>Телерик - PHP</title>
+    </head>
+    <body>
+        Задачи на от 2013 на Телерик за курса по PHP на Иван Ванков - gatakka:
+        <ol>
+            <li>
+                <a href="task-1-expenses">Книга за разходи</a> - трета лекция от 18.09.2013
+            </li>
+            <li>
+                <a href="task-2-uploads">Система за качване на файлове</a> - четвърта лекция от 25.09.2013
+            </li>
+            <li>
+                <a href="task-3-messages">Система за размяна на съобщения</a> - пета лекция от 02.10.2013
+            </li>
+        </ol>
+    </body>
 </html>
